# kdh-tourism-control-board

./: PROJECT_STATUS.md  README.md  config.toml  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_legacy_app.py
.devcontainer/: devcontainer.json
app/: drawing_recognition_app.py  streamlit_api_routes.py  streamlit_app.py  streamlit_html_dashboard.py
data/mock/: household_demand_timeseries.csv  nodes.csv  pumps.csv  reservoirs.csv
data/recognition_test/: simple_water_network_color_result.json  simple_water_network_pipeline_first_result.json  synthetic_network_result.json
frontend/: app.js  dev-server.mjs  index.html  styles.css
kdh/: PROJECT_SPEC.md  README.md
kdh/app/: streamlit_app.py  streamlit_html_dashboard.py
kdh/frontend/: app.js  dev-server.mjs  index.html  styles.css
kdh/kdh-tourism-control-board/: README.md  requirements.txt
kdh/notebooks/: 01_generate_mock_data.ipynb  02_aging_score_demo.ipynb  04_control_recommendation_demo.ipynb
kdh/scripts/: run_dynamic_demo.py
kdh/tests/: test_live_control.py  test_mock_data_validity.py
notebooks/: 03_hydraulic_simulation_demo.ipynb  README.md
scripts/: dashboard_server.py  generate_mock_data.py  recognize_drawing_api.py  run_control_demo.py  run_simulation.py  simulate_network_api.py
tests/: test_aging_score.py  test_control_recommendations.py  test_drawing_recognition.py  test_dynamic_demand.py  test_energy.py  test_headloss.py  test_network_plot.py  test_pressure_constraints.py  test_roughness_mapping.py  test_source_pump_optimizer.py  test_streamlit_dashboard_api_contract.py
(+45 files in other folders)
