[project]
name = "aging-water-network"
version = "0.1.0"
description = "Aging-aware hydraulic digital twin proof of concept for water distribution networks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "networkx>=3.2",
  "matplotlib>=3.8",
  "plotly>=5.18",
  "streamlit>=1.31",
  "streamlit-plotly-events>=0.0.6",
  "pydantic>=2.5",
  "opencv-python-headless>=4.9",
  "google-genai>=1.0",
]

[project.optional-dependencies]
wntr = ["wntr>=1.3"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
